# vol3-project-semester1

./: .gitignore  LinearRegression.pickle  LinearRegressionAIC.pickle  LinearRegressionBIC.pickle  RandomForestRegressor.ipynb  RandomForestRegressor.pkl  data_cleaning.ipynb  linear_regression_model.ipynb  model.ipynb  plots.ipynb  pyproject.toml  xgboost_model.ipynb
